--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -18,6 +18,14 @@
 <meta name="dcterms.modified" content="2024-06-10"/>
 
 <style>
+
+.info.gc-most-requested::after {
+	background-color: #d9edf7 !important;
+}
+
+.info {
+	background-color:#d9edf7 !important;
+}
 	.page-type-theme #gridContainer > nav + section h1#wb-cont {
     font-size: 29px !important;
 	}
@@ -177,15 +185,29 @@
 		<div class="container">
 			<h1 id="wb-cont">Immigration and citizenship</h1>
 		</div>
-		
+			
+		<section class="gc-most-requested info mrgn-bttm-0">
+			<div class="container">
+				<h2>Special measures</h2>
+				<ul>
+				  <li><a href="/en/immigration-refugees-citizenship/services/israel-west-bank-gaza-2023.html">Gaza and the West Bank</a></li>
+                  <li><a href="/en/immigration-refugees-citizenship/services/haiti-2024.html">Haiti</a></li>
+                  <li><a href="/en/immigration-refugees-citizenship/services/iran.html">Iran</a></li>
+                  <li><a href="/en/immigration-refugees-citizenship/services/sudan2023.html">Sudan</a></li>
+                  <li><a href="/en/immigration-refugees-citizenship/services/immigrate-canada/ukraine-measures.html">Ukraine</a></li>
+                  <li><a href="/en/immigration-refugees-citizenship/services/special-measures.html">All special measures</a></li>
+               </ul>
+			</div>
+		</section>
 		<section class="gc-most-requested">
 			<div class="container">
 				<h2>Most requested</h2>
 				<ul>
-					<li><a href="#">Placeholder</a></li>
-					<li><a href="#">Placeholder</a></li>
-					<li><a href="#">Placeholder</a></li>
-					<li><a href="#">Placeholder</a></li>
+					<li><a href="/en/immigration-refugees-citizenship/services/application/ircc-accounts.html">Sign in to your IRCC account</a> </li>
+					<li><a href="/en/immigration-refugees-citizenship/services/application/check-status.html">Check your application status</a> </li>
+					<li><a href="/en/immigration-refugees-citizenship/services/application/check-processing-times.html">Current processing times</a> </li>
+					<li><a href="/en/immigration-refugees-citizenship/services/application/application-forms-guides.html">Find an application form</a> </li>
+					<li><a href="/en/immigration-refugees-citizenship/corporate/partners-service-providers.html">Portals for representatives and partners</a></li>
 				</ul>
 			</div>
 		</section>
