--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -19,6 +19,7 @@
 
 <style>
 
+
 .info.gc-most-requested::after {
 	background-color: #d9edf7 !important;
 }
@@ -30,32 +31,28 @@
     font-size: 29px !important;
 	}
 
+	/* .page-type-theme #gridContainer > nav + section .banded.gc-most-requested h2 {
+    font-size: 29px !important; */
+
 	@media screen and (max-width: 991px) {
     .page-type-theme #gridContainer > nav + section h1#wb-cont {
         font-size: 26px !important;
     }
+	/* .page-type-theme #gridContainer > nav + section .banded.gc-most-requested h2 {
+    font-size: 26px !important;
+	} */
 }
 
 .page-type-theme #gridContainer > nav + section .gc-most-requested h2 {
     font-size: 24px !important;
 }
 
-.page-type-theme h2 {
-    font-size: 24px !important;
-	/* margin-top: 0px !important; */
-
-}
 
 
 @media screen and (max-width: 991px) {
    .page-type-theme #gridContainer > nav + section .gc-most-requested h2 {
         font-size: 20px !important;
     }
-	.page-type-theme h2 {
-    font-size: 20px !important;
-	/* margin-top: 0px !important; */
-}
-
 }
 
 </style>
@@ -213,19 +210,19 @@
 		</section>
     <div class="panel panel-body brdr-0 no-box-shadow mrgn-bttm-0" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
     <div class="col-md-9 col-sm-8">
-      <h2 class="mrgn-tp-0">IRCC applications</h2>
+      <h2 class="mrgn-tp-0 h5">IRCC applications</h2>
       <section class="gc-srvinfo">
         <p>Pay your fees, give biometrics, get a medical exam or police certificate, use an immigration representative</p>
         <p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Go to IRCC applications</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
       </section>
     </div>
     <div class="col-md-3 col-sm-4 hidden-xs">
-      <div class="fa-stack fa-4x ">
+      <div class="fa-stack fa-4x">
         <div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x icon-gry" aria-hidden="true"></i> </div>
-        <i class="fas fa-desktop fa-stack-2x icon-gry" aria-hidden="true"></i> </div>
+        <i class="fas fa-desktop fa-stack-2x icon-gry" style="color: #ccc;" aria-hidden="true"></i> </div>
     </div>
   </div>
-<section class="gc-most-requested">
+<section class="banded gc-most-requested">
   <div class="container mrgn-bttm-sm mrgn-tp-sm">
     <h2 class="mrgn-tp-0">Visas, permits and immigration</h2>
     <section class="gc-srvinfo">
@@ -260,7 +257,7 @@
 </section>
 <div class="">
 <div class="container mrgn-bttm-md mrgn-tp-lg">
-  <h2 class="mrgn-tp-0">Citizenship and settling in Canada</h2>
+  <h2 class="mrgn-tp-0 h5">Citizenship and settling in Canada</h2>
   <section class="gc-srvinfo">
     <div class="row wb-eqht-grd">
       <div class="col-md-6">
@@ -287,7 +284,7 @@
   </section>
 </div>
 </div>
-<section class="gc-most-requested">
+<section class="banded gc-most-requested">
   <div class="container">
     <div class="row">
       <div class="col-md-9 col-sm-8">
@@ -302,7 +299,7 @@
   </div>
 </section>
 <div class="container mrgn-bttm-md mrgn-tp-lg">
-  <h2 class="mrgn-tp-0">Fraud and inadmissibility</h2>
+  <h2 class="mrgn-tp-0 h5">Fraud and inadmissibility</h2>
   <section class="gc-srvinfo">
     <div class="row wb-eqht-grd">
       <div class="col-md-6">
