--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -18,7 +18,9 @@
 <meta name="dcterms.modified" content="2024-06-10"/>
 
 <style>
-
+.icon-gry {
+	color: #f5f5f5 !important;
+}
 
 .info.gc-most-requested::after {
 	background-color: #d9edf7 !important;
@@ -217,9 +219,9 @@
       </section>
     </div>
     <div class="col-md-3 col-sm-4 hidden-xs">
-      <div class="fa-stack fa-4x">
-        <div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x icon-gry" aria-hidden="true"></i> </div>
-        <i class="fas fa-desktop fa-stack-2x icon-gry" style="color: #ccc;" aria-hidden="true"></i> </div>
+      <div class="fa-stack fa-4x icon-gry">
+        <div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
+        <i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
     </div>
   </div>
 <section class="banded gc-most-requested">
