--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -210,7 +210,7 @@
 				</ul>
 			</div>
 		</section>
-    <div class="panel-body brdr-0 no-box-shadow mrgn-bttm-md" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
+    <div class="panel-body brdr-0 no-box-shadow mrgn-bttm-sm" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
     <div class="col-md-9 col-sm-8">
       <h2 class="mrgn-tp-0 h5">IRCC applications</h2>
       <section class="gc-srvinfo">
