--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -210,7 +210,20 @@
 				</ul>
 			</div>
 		</section>
-    <div class="panel-body brdr-0 no-box-shadow mrgn-bttm-sm" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
+		  <div class="container mrgn-bttm-md">
+    <div class="row">
+      <div class="col-md-9 col-sm-8">
+      <h2 class="mrgn-tp-0 h5">IRCC applications</h2>
+      <section class="gc-srvinfo">
+        <p>Pay your fees, give biometrics, get a medical exam or police certificate, use an immigration representative</p>
+        <p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Go to IRCC applications</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
+      </section>
+      <div class="col-md-3 col-sm-4 hidden-xs"> <i class="fas fa-tasks icon-gry fa-8x" aria-hidden="true"></i> </div>
+    </div>
+  </div>
+  </div>
+
+    <!-- <div class="panel-body brdr-0 no-box-shadow mrgn-bttm-sm" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
     <div class="col-md-9 col-sm-8">
       <h2 class="mrgn-tp-0 h5">IRCC applications</h2>
       <section class="gc-srvinfo">
@@ -223,7 +236,7 @@
         <div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
         <i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
     </div>
-  </div>
+  </div> -->
 <section class="banded gc-most-requested">
   <div class="container mrgn-bttm-sm mrgn-tp-sm">
     <h2 class="mrgn-tp-0">Visas, permits and immigration</h2>
