--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -218,7 +218,11 @@
         <p>Pay your fees, give biometrics, get a medical exam or police certificate, use an immigration representative</p>
         <p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Go to IRCC applications</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
       </section>
-      <div class="col-md-3 col-sm-4 hidden-xs"> <i class="fas fa-tasks icon-gry fa-8x" aria-hidden="true"></i> </div>
+		<div class="col-md-3 col-sm-4 hidden-xs">
+			<div class="fa-stack fa-4x icon-gry">
+			<div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
+			<i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
+		</div>
     </div>
   </div>
   </div>
