--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -210,7 +210,7 @@
 				</ul>
 			</div>
 		</section>
-		  <div class="container mrgn-bttm-md">
+		  <div class="container mrgn-bttm-sm">
     <div class="row">
       <div class="col-md-9 col-sm-8">
       <h2 class="mrgn-tp-0 h5">IRCC applications</h2>
