--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -184,7 +184,7 @@
 		<div class="container">
 			<h1 id="wb-cont">Immigration and citizenship</h1>
 		</div>
-			
+	</section>	
 		<section class="gc-most-requested info mrgn-bttm-0">
 			<div class="container">
 				<h2>Special measures</h2>
