--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -33,16 +33,17 @@
     font-size: 29px !important;
 	}
 
-	/* .page-type-theme #gridContainer > nav + section .banded.gc-most-requested h2 {
-    font-size: 29px !important; */
+	.page-type-theme #gridContainer > nav + section .banded.gc-most-requested h2 {
+    font-size: 27px !important;
+	}
 
 	@media screen and (max-width: 991px) {
     .page-type-theme #gridContainer > nav + section h1#wb-cont {
         font-size: 26px !important;
     }
-	/* .page-type-theme #gridContainer > nav + section .banded.gc-most-requested h2 {
-    font-size: 26px !important;
-	} */
+	.page-type-theme #gridContainer > nav + section .banded.gc-most-requested h2 {
+    font-size: 22px !important;
+	}
 }
 
 .page-type-theme #gridContainer > nav + section .gc-most-requested h2 {
@@ -184,7 +185,6 @@
 		<div class="container">
 			<h1 id="wb-cont">Immigration and citizenship</h1>
 		</div>
-	</section>	
 		<section class="gc-most-requested info mrgn-bttm-0">
 			<div class="container">
 				<h2>Special measures</h2>
@@ -212,7 +212,7 @@
 		</section>
     <div class="panel-body brdr-0 no-box-shadow mrgn-bttm-sm" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
     <div class="col-md-9 col-sm-8">
-      <h2 class="mrgn-tp-0 h5">IRCC applications</h2>
+      <h2 class="mrgn-tp-0 h4">IRCC applications</h2>
       <section class="gc-srvinfo">
         <p>Pay your fees, give biometrics, get a medical exam or police certificate, use an immigration representative</p>
         <p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Go to IRCC applications</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
@@ -226,7 +226,7 @@
   </div>
 <section class="banded gc-most-requested">
   <div class="container mrgn-bttm-sm mrgn-tp-sm">
-    <h2 class="mrgn-tp-0">Visas, permits and immigration</h2>
+    <h2 class="mrgn-tp-0 h4">Visas, permits and immigration</h2>
     <section class="gc-srvinfo">
       <div class="row wb-eqht-grd">
         <div class="col-md-6">
@@ -259,7 +259,7 @@
 </section>
 <div class="">
 <div class="container mrgn-bttm-md mrgn-tp-lg">
-  <h2 class="mrgn-tp-0 h5">Citizenship and settling in Canada</h2>
+  <h2 class="mrgn-tp-0 h4">Citizenship and settling in Canada</h2>
   <section class="gc-srvinfo">
     <div class="row wb-eqht-grd">
       <div class="col-md-6">
@@ -290,7 +290,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9 col-sm-8">
-        <h2 class="mrgn-tp-0">Not sure where to start?</h2>
+        <h2 class="mrgn-tp-0 h4">Not sure where to start?</h2>
         <section class="gc-srvinfo">
         <p>Answer a few questions to get a list of programs you may be interested in.</p>
         <p><strong><a href="https://ircc.canada.ca/explore-programs/index.asp">Explore immigration programs</a></strong>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
@@ -301,7 +301,7 @@
   </div>
 </section>
 <div class="container mrgn-bttm-md mrgn-tp-lg">
-  <h2 class="mrgn-tp-0 h5">Fraud and inadmissibility</h2>
+  <h2 class="mrgn-tp-0 h4">Fraud and inadmissibility</h2>
   <section class="gc-srvinfo">
     <div class="row wb-eqht-grd">
       <div class="col-md-6">
