--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -316,6 +316,7 @@
   </section>
 </div>
 </div>
+</section>
 <div class="container">
 	<section class="gc-features" style="margin-bottom: -20px;">
 		<h2 class="h3">Features</h2>
