--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -210,111 +210,109 @@
 				</ul>
 			</div>
 		</section>
-    <div class="panel-body brdr-0 no-box-shadow mrgn-bttm-sm" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
-    <div class="col-md-9 col-sm-8">
-      <h2 class="mrgn-tp-0 h4">IRCC applications</h2>
-      <section class="gc-srvinfo">
-        <p>Pay your fees, give biometrics, get a medical exam or police certificate, use an immigration representative</p>
-        <p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Go to IRCC applications</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
-      </section>
-    </div>
-    <div class="col-md-3 col-sm-4 hidden-xs">
-      <div class="fa-stack fa-4x icon-gry">
-        <div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
-        <i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
-    </div>
-  </div>
-<section class="banded gc-most-requested">
-  <div class="container mrgn-bttm-sm mrgn-tp-sm">
-    <h2 class="mrgn-tp-0 h4">Visas, permits and immigration</h2>
-    <section class="gc-srvinfo">
-      <div class="row wb-eqht-grd">
-        <div class="col-md-6">
-          <h3><a href="/en/immigration-refugees-citizenship/services/visit-canada.html">Visit Canada</a></h3>
-          <p>Visitor visa, electronic travel authorization (eTA), super visa, transit visa, visit on business, extend your visit</p>
-        </div>
-        <div class="col-md-6">
-          <h3><a href="/en/immigration-refugees-citizenship/services/immigrate-canada.html">Live in Canada permanently</a></h3>
-          <p>Permanent residence (PR) programs such as Express Entry, family sponsorship and the Provincial Nominee Program (PNP)</p>
-        </div>
-        <div class="col-md-6">
-          <h3><a href="/en/immigration-refugees-citizenship/services/work-canada.html">Work in Canada temporarily</a></h3>
-          <p>Work permits for up to 3 years, post-graduation work permit (PGWP), hire foreign workers</p>
-        </div>
-        <div class="col-md-6">
-          <h3><a href="/en/immigration-refugees-citizenship/services/study-canada.html">Study in Canada</a></h3>
-          <p>Study permits, designated learning institutions (DLIs), work while you study, change schools</p>
-        </div>
-        <div class="col-md-6">
-          <h3><a href="/en/immigration-refugees-citizenship/services/refugees.html">Refugees and asylum</a></h3>
-          <p>Claim asylum, resettle as a refugee, sponsor a refugee, Economic Mobility Pathways Pilot (EMPP)</p>
-        </div>
-        <div class="col-md-6">
-          <h3><a href="https://ircc.canada.ca/iec/index.asp">International Experience Canada (IEC)</a></h3>
-          <p>Special program for youth aged 18 to 35 to work and travel abroad, including working holiday visas</p>
-        </div>
-      </div>
-    </section>
-  </div>
-</section>
-<div class="">
-<div class="container mrgn-bttm-md mrgn-tp-lg">
-  <h2 class="mrgn-tp-0 h4">Citizenship and settling in Canada</h2>
-  <section class="gc-srvinfo">
-    <div class="row wb-eqht-grd">
-      <div class="col-md-6">
-        <h3><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports and other travel documents</a></h3>
-        <p>Renew or apply for an adult passport, apply for a passport for your child, passport photos</p>
-      </div>
-      <div class="col-md-6">
-        <h3><a href="/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Citizenship</a></h3>
-        <p>Apply for citizenship, citizenship test and ceremony, study guide, citizenship certificate</p>
-      </div>
-      <div class="col-md-6">
-        <h3><a href="/en/immigration-refugees-citizenship/services/permanent-residents.html">Permanent resident (PR) cards and status</a></h3>
-        <p>Renew or replace a PR card, apply for a permanent resident travel document (PRTD)</p>
-      </div>
-      <div class="col-md-6">
-        <h3><a href="/en/immigration-refugees-citizenship/services/settle-canada.html">Settling in Canada as a newcomer</a></h3>
-        <p>Free immigrant services, benefits and taxes for newcomers, find a job, learn English or French</p>
-      </div>
-      <div class="col-md-6">
-        <h3><a href="/en/immigration-refugees-citizenship/services/canadians/adopt-child-abroad.html">International adoption</a></h3>
-        <p>Apply for the citizenship or permanent residence of your adopted child from another country</p>
-      </div>
-    </div>
-  </section>
-</div>
-</div>
-<section class="banded gc-most-requested">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-9 col-sm-8">
-        <h2 class="mrgn-tp-0 h4">Not sure where to start?</h2>
-        <section class="gc-srvinfo">
-        <p>Answer a few questions to get a list of programs you may be interested in.</p>
-        <p><strong><a href="https://ircc.canada.ca/explore-programs/index.asp">Explore immigration programs</a></strong>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
-        </section>
-      </div>
-      <div class="col-md-3 col-sm-4 hidden-xs"> <i class="fas fa-search text-white fa-8x" aria-hidden="true"></i> </div>
-    </div>
-  </div>
-</section>
-<div class="container mrgn-bttm-md mrgn-tp-lg">
-  <h2 class="mrgn-tp-0 h4">Fraud and inadmissibility</h2>
-  <section class="gc-srvinfo">
-    <div class="row wb-eqht-grd">
-      <div class="col-md-6">
-        <h3><a href="/en/immigration-refugees-citizenship/services/protect-fraud.html">Immigration fraud and scams</a></h3>
-        <p>Check if your representative is authorized, report fraud or abuse, avoid marriage fraud</p>
-      </div>
-      <div class="col-md-6">
-        <h3><a href="/en/services/immigration-citizenship/enforcement-violations.html">Inadmissibility, enforcement and appeals</a></h3>
-        <p>Check if you’re inadmissible, arrests, detentions, removals, overcoming criminal convictions</p>
-      </div>
-    </div>
-  </section>
-</div>
+	<div class="panel-body brdr-0 no-box-shadow mrgn-bttm-sm" style="margin-top: -10px; padding-left: 20px !important; border-bottom: none !important;">
+	<div class="col-md-9 col-sm-8">
+		<h2 class="mrgn-tp-0 h4">IRCC applications</h2>
+		<section class="gc-srvinfo">
+		<p>Pay your fees, give biometrics, get a medical exam or police certificate, use an immigration representative</p>
+		<p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Go to IRCC applications</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
+		</section>
+	</div>
+	<div class="col-md-3 col-sm-4 hidden-xs">
+		<div class="fa-stack fa-4x icon-gry">
+		<div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
+		<i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
+	</div>
+	</div>
+	<div class="banded gc-most-requested">
+	<div class="container mrgn-bttm-sm mrgn-tp-sm">
+		<h2 class="mrgn-tp-0 h4">Visas, permits and immigration</h2>
+		<section class="gc-srvinfo">
+		<div class="row wb-eqht-grd">
+			<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/visit-canada.html">Visit Canada</a></h3>
+			<p>Visitor visa, electronic travel authorization (eTA), super visa, transit visa, visit on business, extend your visit</p>
+			</div>
+			<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/immigrate-canada.html">Live in Canada permanently</a></h3>
+			<p>Permanent residence (PR) programs such as Express Entry, family sponsorship and the Provincial Nominee Program (PNP)</p>
+			</div>
+			<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/work-canada.html">Work in Canada temporarily</a></h3>
+			<p>Work permits for up to 3 years, post-graduation work permit (PGWP), hire foreign workers</p>
+			</div>
+			<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/study-canada.html">Study in Canada</a></h3>
+			<p>Study permits, designated learning institutions (DLIs), work while you study, change schools</p>
+			</div>
+			<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/refugees.html">Refugees and asylum</a></h3>
+			<p>Claim asylum, resettle as a refugee, sponsor a refugee, Economic Mobility Pathways Pilot (EMPP)</p>
+			</div>
+			<div class="col-md-6">
+			<h3><a href="https://ircc.canada.ca/iec/index.asp">International Experience Canada (IEC)</a></h3>
+			<p>Special program for youth aged 18 to 35 to work and travel abroad, including working holiday visas</p>
+			</div>
+		</div>
+		</section>
+	</div>
+	</div>
+	<div class="container mrgn-bttm-md mrgn-tp-lg">
+	<h2 class="mrgn-tp-0 h4">Citizenship and settling in Canada</h2>
+	<section class="gc-srvinfo">
+		<div class="row wb-eqht-grd">
+		<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports and other travel documents</a></h3>
+			<p>Renew or apply for an adult passport, apply for a passport for your child, passport photos</p>
+		</div>
+		<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Citizenship</a></h3>
+			<p>Apply for citizenship, citizenship test and ceremony, study guide, citizenship certificate</p>
+		</div>
+		<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/permanent-residents.html">Permanent resident (PR) cards and status</a></h3>
+			<p>Renew or replace a PR card, apply for a permanent resident travel document (PRTD)</p>
+		</div>
+		<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/settle-canada.html">Settling in Canada as a newcomer</a></h3>
+			<p>Free immigrant services, benefits and taxes for newcomers, find a job, learn English or French</p>
+		</div>
+		<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/canadians/adopt-child-abroad.html">International adoption</a></h3>
+			<p>Apply for the citizenship or permanent residence of your adopted child from another country</p>
+		</div>
+		</div>
+	</section>
+	</div>
+	<section class="banded gc-most-requested">
+	<div class="container">
+		<div class="row">
+		<div class="col-md-9 col-sm-8">
+			<h2 class="mrgn-tp-0 h4">Not sure where to start?</h2>
+			<section class="gc-srvinfo">
+			<p>Answer a few questions to get a list of programs you may be interested in.</p>
+			<p><strong><a href="https://ircc.canada.ca/explore-programs/index.asp">Explore immigration programs</a></strong>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
+			</section>
+		</div>
+		<div class="col-md-3 col-sm-4 hidden-xs"> <i class="fas fa-search text-white fa-8x" aria-hidden="true"></i> </div>
+		</div>
+	</div>
+	</section>
+	<div class="container mrgn-bttm-md mrgn-tp-lg">
+	<h2 class="mrgn-tp-0 h4">Fraud and inadmissibility</h2>
+	<section class="gc-srvinfo">
+		<div class="row wb-eqht-grd">
+		<div class="col-md-6">
+			<h3><a href="/en/immigration-refugees-citizenship/services/protect-fraud.html">Immigration fraud and scams</a></h3>
+			<p>Check if your representative is authorized, report fraud or abuse, avoid marriage fraud</p>
+		</div>
+		<div class="col-md-6">
+			<h3><a href="/en/services/immigration-citizenship/enforcement-violations.html">Inadmissibility, enforcement and appeals</a></h3>
+			<p>Check if you’re inadmissible, arrests, detentions, removals, overcoming criminal convictions</p>
+		</div>
+		</div>
+	</section>
+	</div>
 </div>
 </section>
 <div class="container">
