--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -314,7 +314,6 @@
 	</section>
 	</div>
 </div>
-</section>
 <div class="container">
 	<section class="gc-features" style="margin-bottom: -20px;">
 		<h2 class="h3">Features</h2>
@@ -342,6 +341,8 @@
 			</div>
 		</div>
 	</section>
+</div>
+</section>
 </div>
 <section class="pagedetails container">
 	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
