--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -220,7 +220,7 @@
 	</div>
 	<div class="col-md-3 col-sm-4 hidden-xs">
 		<div class="fa-stack fa-4x icon-gry">
-		<div class="mrgn-bttm-md"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
+		<div class="mrgn-bttm-sm"> <i class="fas fa-tasks fa-stack-1x" aria-hidden="true"></i> </div>
 		<i class="fas fa-desktop fa-stack-2x" aria-hidden="true"></i> </div>
 	</div>
 	</div>
