--- a/chelsey/design/404_fr.html
+++ b/chelsey/design/404_fr.html
@@ -1,1 +1,51 @@
-
+---
+altLangPage: "#"
+css:
+- https://design.canada.ca/css/split-h1.css
+- https://design.canada.ca/css/custom.css
+- https://use.fontawesome.com/releases/v5.15.4/css/all.css
+date: 2023-02-24
+dateModified: 2023-02-24
+description: "Standard page with breadcrumbs"
+lang: en
+layout: default
+pageclass: cnt-wdth-lmtd
+title: "Page non trouvée"
+---
+<p><span class="label label-danger">Erreur 404</span></p>
+<p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p> 
+<p>Vous pouvez rechercher :</p>
+<ul>
+<li><a href="https://www.canada.ca/fr.html">Page d'accueil de Canada.ca</a></li>
+<li><a href="https://www.canada.ca/fr/services.html">Services du gouvernement du Canada</a></li>
+<li><a href="https://www.canada.ca/fr/contact.html">Contactez le gouvernement du Canada</a></li>
+<li><a href="https://www.canada.ca/fr/gouvernement/ouvrir-session-dossier-compte-en-ligne.html">Se connecter à un compte</a></li>
+<li><a href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
+<li><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
+<li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Visiter ou immigrer au Canada</a></li>
+</ul>
+ <!-- French search -->
+            <section class="col-md-12">
+              <h3 class="wb-inv">Recherche</h3>
+              <form action="/fr/sr/srb.html" method="get" name="cse-search-box" role="search" class="form-inline">
+                <input name="cdn" value="canada" type="hidden">
+                <input name="st" value="s" type="hidden">
+                <input name="num" value="10" type="hidden">
+                <input name="langs" value="fra" type="hidden">
+                <input name="st1rt" value="0" type="hidden">
+                <input name="s5bm3ts21rch" value="x" type="hidden">
+                <div class="input-group">
+                  <label for="wb-srch-q" class="wb-inv">Recherchez le site Web</label>
+                  <input id="wb-srch-q-fr" list="wb-srch-q-ac-fr" class="wb-srch-q form-control" name="q" type="search" value="" size="27" maxlength="150" placeholder="Rechercher dans Canada.ca">
+                  <datalist id="wb-srch-q-ac-fr"></datalist>
+                  <span class="input-group-btn">
+                    <button type="submit" id="wb-srch-sub-fr" class="btn btn-primary btn-small" name="wb-srch-sub-fr">
+                      <span class="glyphicon glyphicon-search"></span>
+                      <span class="wb-inv">Recherche</span>
+                    </button>
+                  </span>
+                </div>
+              </form>
+            </section>
+          </div>
+        </section>
