--- a/chelsey/design/bilingual_404.html
+++ b/chelsey/design/bilingual_404.html
@@ -16,18 +16,25 @@ title: "Page not found"
   <div class="row mrgn-tp-lg mrgn-bttm-lg">
     <div class="col-md-12">
       <div class="row">
-        
+        <!-- Combined section for headings -->
+        <section>
+          <div class="col-md-12">
+            <div class="mwstext section">
+              <div class="row">
+                <div class="col-xs-9 col-sm-10 col-md-10">
+                  <h1 id="wb-cont" style="display: inline;">Page not found</h1>
+                  <h1 id="wb-cont-fr" style="display: inline; margin-left: 15px;">Page non trouvée</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- English section -->
         <section>
           <div class="col-md-6">
             <div class="mwstext section">
-              <div class="row">
-                <div class="col-xs-9 col-sm-10 col-md-10">
-                  <h1 id="wb-cont">Page not found</h1>
-                  <p><span class="label label-danger">404 error</span></p>
-                  <p><a href="#">Go to the French version</a></p>
-                </div>
-              </div>
+              <p><span class="label label-danger">404 error</span></p>
+              <p><a href="#">Go to the French version</a></p>
               <p>The page you’re looking for may have been moved or deleted. Check that the web address (URL) is spelled correctly. Do not include special characters or spaces in the URL.</p>
               <p>You may be looking for:</p>
               <ul>
@@ -37,7 +44,6 @@ title: "Page not found"
                 <li><a href="www.canada.ca">Sign in to an account</a></li>
               </ul>
             </div>
-
             <!-- English search -->
             <section class="col-md-12">
               <h3 class="wb-inv">Search</h3>
@@ -63,18 +69,12 @@ title: "Page not found"
             </section>
           </div>
         </section>
-
         <!-- French section -->
         <section lang="fr">
           <div class="col-md-6">
             <div class="mwstext section">
-              <div class="row">
-                <div class="col-xs-9 col-sm-10 col-md-10">
-                  <h1 id="wb-cont">Page non trouvée</h1>
-                  <p><span class="label label-danger">Erreur 404</span></p>
-                  <p><a href="#">Aller à la version anglaise</a></p>
-                </div>
-              </div>
+              <p><span class="label label-danger">Erreur 404</span></p>
+              <p><a href="#">Aller à la version anglaise</a></p>
               <p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p>
               <p>Vous pouvez rechercher :</p>
               <ul>
@@ -84,7 +84,6 @@ title: "Page not found"
                 <li><a href="www.canada.ca">Se connecter à un compte</a></li>
               </ul>
             </div>
-
             <!-- French search -->
             <section class="col-md-12">
               <h3 class="wb-inv">Recherche</h3>
@@ -110,7 +109,6 @@ title: "Page not found"
             </section>
           </div>
         </section>
-
       </div>
     </div>
   </div>
