--- a/chelsey/design/bilingual_404.html
+++ b/chelsey/design/bilingual_404.html
@@ -168,10 +168,13 @@
                     <p>The page you’re looking for may have been moved or deleted. Check that the web address (URL) is spelled correctly. Do not include special characters or spaces in the URL.</p>
                     <p>You may be looking for:</p>
                     <ul>
-                        <li><a href="www.canada.ca">Canada.ca home page</a></li>
-                        <li><a href="www.canada.ca">Government of Canada services</a></li>
-                        <li><a href="www.canada.ca">Contact the Government of Canada</a></li>
-                        <li><a href="www.canada.ca">Sign in to an account</a></li>
+                        <li><a href="https://www.canada.ca/en.html">Canada.ca home page</a></li>
+                        <li><a href="https://www.canada.ca/en/services.html">Government of Canada services</a></li>
+                        <li><a href="https://www.canada.ca/en/contact.html">Contact the Government of Canada</a></li>
+                        <li><a href="https://www.canada.ca/en/government/sign-in-online-account.html">Sign in to an account</a></li>
+                        <li><a href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
+                        <li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
+                        <li><a href="https://www.canada.ca/en/services/immigration-citizenship.html">Visit or immigrate to Canada</a></li>
                     </ul>
                 </div>
                 <!-- English search -->
@@ -211,10 +214,13 @@
                     <p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p>
                     <p>Vous pouvez rechercher :</p>
                     <ul>
-                        <li><a href="www.canada.ca">Page d'accueil de Canada.ca</a></li>
-                        <li><a href="www.canada.ca">Services du gouvernement du Canada</a></li>
-                        <li><a href="www.canada.ca">Contactez le gouvernement du Canada</a></li>
-                        <li><a href="www.canada.ca">Se connecter à un compte</a></li>
+                        <li><a href="https://www.canada.ca/fr.html">Page d'accueil de Canada.ca</a></li>
+                        <li><a href="https://www.canada.ca/fr/services.html">Services du gouvernement du Canada</a></li>
+                        <li><a href="https://www.canada.ca/fr/contact.html">Contactez le gouvernement du Canada</a></li>
+                        <li><a href="https://www.canada.ca/fr/gouvernement/ouvrir-session-dossier-compte-en-ligne.html">Se connecter à un compte</a></li>
+                        <li><a href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
+                        <li><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
+                        <li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Visiter ou immigrer au Canada</a></li>
                     </ul>
                 </div>
                 </section>
