--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -357,8 +357,14 @@
 <div class="gc-contextual">
 		<div class="container">
 			<nav>
-				<h3>Jobs</h3>
-				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3"><li><a href="https://www.jobbank.gc.ca/login">Job Bank</a></li><li><a href="https://www.canada.ca/en/services/jobs/opportunities/government.html">Government of Canada jobs</a></li><li><a href="https://www.canada.ca/en/services/jobs/opportunities/student.html">Student employment</a></li></ul>
+				<h3>Immigration and citizenship</h3>
+				<ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
+					<li><a href="https://ircc.canada.ca/english/helpcentre/index-featured-can.asp">Help Centre</a></li>
+        
+            <li><a href="/en/immigration-refugees-citizenship/corporate/contact-ircc.html">Contact us</a></li>
+        
+            <li><a href="/en/immigration-refugees-citizenship/corporate/contact-ircc/web-form.html">IRCC web form</a></li>
+				</ul>
 			</nav>
 		</div>
 	</div>
