--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -128,7 +128,7 @@
 	<h2 class="wb-inv">Sign in</h2>
 	
 	<a class="btn btn-primary" href="sign-in-en.html"><span class="visible-xs">Sign in</span>
-			<span class="hidden-xs">Sign in</span>
+			<span class="hidden-xs">IRCC sign in</span>
 	</a></section>
 
 				</div></div>
