--- a/chelsey/design/can-us.html
+++ b/chelsey/design/can-us.html
@@ -79,20 +79,50 @@ title: "Title: TBD"
   </ul>
 		</div>
 		<div class="col-md-6 col-lg-4">
-			<h3><a href="#">[Hyperlink text]</a></h3>
-			<p>Use action verbs, or simply list keywords to summarize the information or tasks that can be accomplished on the page it links to</p>
+			<h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
+<ul>
+	<li>Tariff information and Harmonized System (HS) codes</li>
+<li>Canadian customs tariff</li>
+<li>export and import controls</li> 
+<li>Canadian sanctions</li>
+<li>responsible business conduct abroad</li>
+<li>trade agreements, negotiations and consultations</li>
+</ul>
 		</div>
 		<div class="col-md-6 col-lg-4">
-			<h3><a href="#">[Hyperlink text]</a></h3>
-			<p>Use action verbs, or simply list keywords to summarize the information or tasks that can be accomplished on the page it links to</p>
+			<h3><a href="https://www.tradecommissioner.gc.ca/en/market-industry-info/search-country-region/country/canada-united-states-export.html">Doing business in the United States</a></h3>
+<ul>
+	<li>market overview</li>
+<li>tariffs, rules and regulations</li>
+<li>navigating business expansion, events</li>
+<li>funding, financing and support programs</li>
+<li>contacts</li>
+</ul>
 		</div>
 		<div class="col-md-6 col-lg-4">
-			<h3><a href="#">[Hyperlink text]</a></h3>
-			<p>Use action verbs, or simply list keywords to summarize the information or tasks that can be accomplished on the page it links to</p>
+			<h3><a href="https://agriculture.canada.ca/en/programs">Agricultural programs and services</a></h3>
+<ul>
+	<li>programs and services supporting innovation</li>
+<li>sustainable farming</li>
+<li>business development</li>
+<li>risk management</li>
+<li>trade and market development</li>
+</ul>
 		</div>
 		<div class="col-md-6 col-lg-4">
-			<h3><a href="#">[Hyperlink text]</a></h3>
-			<p>Use action verbs, or simply list keywords to summarize the information or tasks that can be accomplished on the page it links to</p>
+			<h3><a href="https://www.tariffinder.ca/en/getStarted">Canada Tariff Finder</a></h3>
+			<p>The Canada Tariff Finder enables Canadian businesses to check import or export tariffs for specific goods and markets, with a focus on countries with which Canada has a Free Trade Agreement.</p>
+		</div>
+				<div class="col-md-6 col-lg-4">
+			<h3><a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/process-requesting-remission-tariffs-that-apply-on-certain-goods-us.html">Process for requesting remission of tariffs that apply on certain goods from the U.S.</a></h3>
+			<p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
+		</div>
+							<div class="col-md-6 col-lg-4">
+			<h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html">https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html</a></h3>
+								<p>Remission provides full or partial relief from federal tax, interest, penalty, or other debt paid or payable under legislation administered by the Canada Revenue Agency (CRA).</p>
+
+</a></h3>
+			<p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
 		</div>
 	</div>
 </section>
