--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -310,7 +310,7 @@
 				</details>
 					<details><summary><h3 class="h5 mb-4">Benefits, dental care and other financial support</h3></summary>
 				<ul id="6" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
-					<li><a href="https://www.canada.ca/en/services/benefits/disability.html">Benefits for people with disabilities</a></li> <!-- #24-->
+					<li><a href="https://www.canada.ca/en/services/benefits/disability.html">Disability benefits</a></li> <!-- #24-->
 					<li><a href="https://www.canada.ca/en/services/benefits/dental/dental-care-plan.html">Canadian Dental Care Plan</a></li> <!-- #26-->
 					<li><a href="https://www.canada.ca/en/services/benefits/education/student-aid.html">Student aid</a></li>
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview.html">Canada Child Benefit (CCB)</a></li> <!-- #33-->
