--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -349,12 +349,26 @@
 					<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/corporate/contact-ircc.html">Contact Immigration, Refugees and Citizenship Canada</a></li> <!-- #23-->
 				</ul>
 				</details>    
-				<details><summary><h3 class="h5 mb-4">Canadian passports and citizenship</h3></summary>
+				<!-- <details><summary><h3 class="h5 mb-4">Canadian passports and citizenship</h3></summary>
+				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport.html">Renew a Canadian passport</a></li>   #11
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/check-passport-travel-document-application.html">Check the status of a passport application</a></li> #36
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Apply for Canadian citizenship</a></li>  #13
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/new-adult-passport.html">Apply for a new Canadian passport</a></li> #41
+					</ul>
+				</details> -->
+				<details><summary><h3 class="h5 mb-4">Passports for Canadians</h3></summary>
 				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport.html">Renew a Canadian passport</a></li>  <!-- #11-->
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/check-passport-travel-document-application.html">Check the status of a passport application</a></li> <!-- #36-->
-						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Apply for Canadian citizenship</a></li>  <!-- #13-->
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/new-adult-passport.html">Apply for a new Canadian passport</a></li> <!-- #41-->
+					</ul>
+				</details>
+				<details><summary><h3 class="h5 mb-4">Canadian citizenship and permanent residents</h3></summary>
+				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Apply for Canadian citizenship</a></li>  <!-- #13-->
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html">Check your application status</a></li>  <!-- #2 -->
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/permanent-residents/card.html">Get, renew or replace a permanent resident card</a></li> <!-- #42 -->
 					</ul>
 				</details>
 				<details><summary><h3 class="h5 mb-4">Personal taxes</h3></summary>
