--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -364,7 +364,7 @@
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/new-adult-passport.html">Apply for a new Canadian passport</a></li> <!-- #41-->
 					</ul>
 				</details>
-				<details><summary><h3 class="h5 mb-4">Canadian citizenship and permanent residents</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Canadian citizenship and permanent resident cards</h3></summary>
 				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Apply for Canadian citizenship</a></li>  <!-- #13-->
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html">Check your application status</a></li>  <!-- #2 -->
