--- a/jmtesting/all-services/top-task-expand-collapse 2.html
+++ b/jmtesting/all-services/top-task-expand-collapse 2.html
@@ -273,9 +273,11 @@
                 <h2 class="h3 mb-4">Most requested services</h2> <!-- top search content ended up top tasks, this can include any other items as they come up, this is dynamic with trends -->
                 <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
                   <li><a href="/en/government/sign-in-online-account.html">Sign in to an account</a></li>
-				 <li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
-				  <li><a href="https://www.canada.ca/en/government/grants-funding.html">Find grants and funding</a></li>
-				  <li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
+                  <li><a href="/en/government/change-address.html">Change your address</a></li>
+                  <li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
+                  <li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
+				  <li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
+				<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
 
 				</ul>
               </div>
@@ -313,12 +315,14 @@
 					<li><a href="https://www.canada.ca/en/services/benefits/education/student-aid.html">Student aid</a></li>
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-child-benefit-overview.html">Canada Child Benefit (CCB)</a></li> <!-- #33-->
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-workers-benefit.html">Canada Workers Benefit</a></li> <!-- from Chelsey Airtable -->
+					<li><a href="https://www.canada.ca/en/government/grants-funding.html">Find grants and funding</a></li>
+					<li><a href="https://www.canada.ca/en/services/benefits/disability.html">Disability benefits</a></li>
 					<li><a href="https://www.canada.ca/en/services/benefits/housing.html">Housing benefits</a></li>
 					<li><a href="https://www.canada.ca/en/services/taxes/child-and-family-benefits.html">Tax credits for individuals</a></li>
 					<li><a href="https://srv138.services.gc.ca/daf/q?id=517e13e4-c46a-4d19-a503-9dfcd80d8dc2&goctemplateculture=en-ca">Benefits finder</a></li>
 				</ul>
 				</details>
-				<details><summary><h3 class="h5 mb-4">Retirement pensions (CPP, OAS, GIS)</h3></summary>
+								<details><summary><h3 class="h5 mb-4">Retirement pensions (CPP, OAS, GIS)</h3></summary>
 				<ul id="7" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.canada.ca/en/services/benefits/calendar.html">Pension payment dates</a></li> <!-- #39-->
 					<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/retirement-income-calculator.html">Canadian Retirement Income Calculator</a></li>
@@ -393,14 +397,7 @@
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services.html">Access your CRA account</a></li> <!-- #49 -->
 				</ul>
 				</details>
-				<details><summary><h3 class="h5 mb-4">Online accounts (update your information, get help, get personal access code)</h3></summary>
-				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
-		       		<li><a href="/en/government/change-address.html">Change your address</a></li>
-                  	<li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
-					<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
-					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services.html?type=myacct">Help with using your CRA account</a></li>
-				</ul>
-				</details>
+
 				<details><summary><h3 class="h5 mb-4">Alerts and advisories</h3></summary>
 				<ul id="8" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://weather.gc.ca/mainmenu/alert_menu_e.html">Weather alerts</a></li> <!-- #32-->
