--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -272,10 +272,12 @@
               <div class="container">
                 <h2 class="h3 mb-4">Most requested services</h2> <!-- top search content ended up top tasks, this can include any other items as they come up, this is dynamic with trends -->
                 <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd-2 fnt-hdng">
-                  <li><a href="/en/government/sign-in-online-account.html">Sign in to an account</a></li>
-				 <li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
-				  <li><a href="https://www.canada.ca/en/government/grants-funding.html">Find grants and funding</a></li>
-				  <li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
+					<li><a href="/en/government/sign-in-online-account.html">Sign in to an account</a></li>
+					<li><a href="/en/employment-social-development/services/sin.html">Social insurance number (<abbr>SIN</abbr>)</a></li>
+					<li><a href="https://www.canada.ca/en/services/benefits/dental/dental-care-plan.html">Canadian Dental Care Plan</a></li> <!-- #26-->
+					<li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>
+					<li><a href="https://www.canada.ca/en/government/grants-funding.html">Find grants and funding</a></li>
+					<li><a href="/en/services/jobs/opportunities.html">Find a job</a></li>
 
 				</ul>
               </div>
@@ -302,7 +304,6 @@
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/after-applying.html">Check your Employment Insurance (EI) claim</a></li> <!-- #19 My Service Canada Account (MSC) -->
 					<li><a href="https://www.canada.ca/en/services/benefits/family.html">Maternity, parental, and caregiving benefits and leave</a></li>
 					<li><a href="https://www.canada.ca/en/services/benefits/ei/ei-sickness.html">Sickness benefits and leave</a></li>
-					<li><a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-roe.html">Record of employment (<abbr>ROE</abbr>)</a></li>
 
 				</ul>
 				</details>
