--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -394,7 +394,7 @@
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services.html">Access your CRA account</a></li> <!-- #49 -->
 				</ul>
 				</details>
-				<details><summary><h3 class="h5 mb-4">Online accounts (update your information, get help, get personal access code, GCkey)</h3></summary>
+				<details><summary><h3 class="h5 mb-4">Accounts (update your information, get help, get personal access code, GCkey)</h3></summary>
 				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 		       		<li><a href="/en/government/change-address.html">Change your address</a></li>
                   	<li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
