--- a/jmtesting/all-services/top-task-expand-collapse.html
+++ b/jmtesting/all-services/top-task-expand-collapse.html
@@ -361,13 +361,6 @@
 						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/new-adult-passport.html">Apply for a new Canadian passport</a></li> <!-- #41-->
 					</ul>
 				</details>
-				<details><summary><h3 class="h5 mb-4">Canadian citizenship and permanent resident cards</h3></summary>
-				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
-						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Apply for Canadian citizenship</a></li>  <!-- #13-->
-						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html">Check your application status</a></li>  <!-- #2 -->
-						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/permanent-residents/card.html">Get, renew or replace a permanent resident card</a></li> <!-- #42 -->
-					</ul>
-				</details>
 				<details><summary><h3 class="h5 mb-4">Personal taxes</h3></summary>
 				<ul id="3" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services.html">Access your CRA account</a></li><!-- #3-->
@@ -394,20 +387,27 @@
 					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services.html">Access your CRA account</a></li> <!-- #49 -->
 				</ul>
 				</details>
-				<details><summary><h3 class="h5 mb-4">Accounts (update your information, get help, get personal access code, GCkey)</h3></summary>
-				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
-		       		<li><a href="/en/government/change-address.html">Change your address</a></li>
-                  	<li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
-					<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
-					<li><a href="https://www.canada.ca/en/government/sign-in-online-account/gckey.html">GCkey help</a></li>
-					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services.html?type=myacct">Help with using your CRA account</a></li>
-				</ul>
+				<details><summary><h3 class="h5 mb-4">Canadian citizenship and permanent resident cards</h3></summary>
+				<ul id="2" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Apply for Canadian citizenship</a></li>  <!-- #13-->
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html">Check your application status</a></li>  <!-- #2 -->
+						<li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/permanent-residents/card.html">Get, renew or replace a permanent resident card</a></li> <!-- #42 -->
+					</ul>
 				</details>
 				<details><summary><h3 class="h5 mb-4">Alerts and advisories</h3></summary>
 				<ul id="8" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
 					<li><a href="https://weather.gc.ca/mainmenu/alert_menu_e.html">Weather alerts</a></li> <!-- #32-->
 					<li><a href="https://travel.gc.ca/travelling/advisories">Travel advice and advisories</a></li> <!-- #48-->
 					<li><a href="https://recalls-rappels.canada.ca/en">Recalls and safety alerts</a></li>
+				</ul>
+				</details>
+					<details><summary><h3 class="h5 mb-4">Online accounts (update your information, get help, get personal access code, GCkey)</h3></summary>
+				<ul id="5" class="colcount-md-2 lst-spcd-2 fnt-hdng mrgn-tp-lg mrgn-bttm-md">
+		       		<li><a href="/en/government/change-address.html">Change your address</a></li>
+                  	<li><a href="/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Set up or change your direct deposit</a></li>
+					<li><a href="/en/employment-social-development/services/my-account/find-pac.html">Personal Access Code (<abbr>PAC</abbr>) for My Service Canada Account</a></li>
+					<li><a href="https://www.canada.ca/en/government/sign-in-online-account/gckey.html">GCkey help</a></li>
+					<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services.html?type=myacct">Help with using your CRA account</a></li>
 				</ul>
 				</details>
 				<details><summary><h3 class="h5 mb-4">Provincial or territorial government (birth certificates, marriage licenses, driver's licenses, health cards)</h3></summary>
